Fix incorrect key in Gitlab CI yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,8 @@ before_script:
   - rustup toolchain install stable-i686-pc-windows-msvc
 
 build:
-  extends: .shared-windows-runners
+  extends:
+    - .shared-windows-runners
   stage: build
   script:
     - cargo +stable-i686-pc-windows-msvc build --verbose
