--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ stages:
 
 before_script:
   - choco install -y jdk8 --x86
-  - choco install -y rustup.install
-  - rustup toolchain install stable-i686-pc-windows-msvc
+  - curl -sSf -o rustup-init.exe https://win.rustup.rs/i686
+  - rustup-init.exe -y --default-toolchain stable --default-host i686-pc-windows-msvc
 
 build:
   extends:
