--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 
 before_script:
   - choco install -y jdk8 --x86
-  - curl -sSf -o rustup-init.exe https://win.rustup.rs/i686
+  - curl -o rustup-init.exe https://win.rustup.rs/i686
   - rustup-init.exe -y --default-toolchain stable --default-host i686-pc-windows-msvc
 
 build:
