--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ stages:
 before_script:
   - choco install -y jdk8 --x86
   - curl -o rustup-init.exe https://win.rustup.rs/i686
-  - rustup-init.exe -y --default-toolchain stable --default-host i686-pc-windows-msvc
+  - .\rustup-init.exe -y --default-toolchain stable --default-host i686-pc-windows-msvc
 
 build:
   extends:
