--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,9 @@
   - windows
   - windows-1809
 
+variables:
+  CARGO_HOME: %CI_PROJECT_DIR%/cargo
+
 stages:
   - build
 
@@ -11,7 +14,7 @@ before_script:
   - choco install -y jdk8 --x86
   - curl -o rustup-init.exe https://win.rustup.rs/i686
   - .\rustup-init.exe -y --profile minimal --default-toolchain stable --default-host i686-pc-windows-msvc
-  - set PATH='%PATH%;%USERPROFILE%\.cargo\bin'
+  - set PATH='%PATH%;%CARGO_HOME%\bin'
 
 build:
   extends:
