--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,14 +4,12 @@
   - windows
   - windows-1809
 
-variables:
-  CARGO_HOME: %CI_PROJECT_DIR%\cargo
-
 stages:
   - build
 
 before_script:
   - choco install -y jdk8 --x86
+  - set CARGO_HOME='%CI_PROJECT_DIR%\cargo'
   - curl -o rustup-init.exe https://win.rustup.rs/i686
   - .\rustup-init.exe -y --profile minimal --default-toolchain stable --default-host i686-pc-windows-msvc
   - set PATH='%PATH%;%CARGO_HOME%\bin'
