--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,13 +9,11 @@ stages:
 
 before_script:
   - choco install -y jdk8 --x86
-  - choco install -y llvm
+  - choco install -y llvm --x86
   - Set-Item -path env:CARGO_HOME -value ($env:CI_PROJECT_DIR + "\cargo")
-  - Write-Output $env:CARGO_HOME
+  - Set-Item -path env:PATH -value ($env:PATH + ";" + $env:CARGO_HOME + "\bin")
   - curl -o rustup-init.exe https://win.rustup.rs/i686
   - .\rustup-init.exe -y --profile minimal --default-toolchain stable --default-host i686-pc-windows-msvc
-  - Set-Item -path env:PATH -value ($env:PATH + ";" + $env:CARGO_HOME + "\bin")
-  - Write-Output $env:PATH
 
 build:
   extends:
