--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,13 @@
   - windows
   - windows-1809
 
+variables:
+  RUST_BACKTRACE: "1"
+
 stages:
+  - test
   - build
+  - deploy
 
 before_script:
   - choco install -y jdk8 --x86
@@ -15,10 +20,23 @@ before_script:
   - curl -o rustup-init.exe https://win.rustup.rs/i686
   - .\rustup-init.exe -y --profile minimal --default-toolchain stable --default-host i686-pc-windows-msvc
 
+test:
+  extends:
+    - .shared_windows_runners
+  stage: test
+  script:
+    - cargo build --verbose
+    - cargo test --verbose
+
 build:
   extends:
     - .shared_windows_runners
   stage: build
   script:
-    - cargo build --verbose
-    - cargo test --verbose
+    - cargo build --release
+  artifacts:
+    paths:
+      - target\release\physfs_jni.dll
+  trigger:
+    project: DavidGregory084/il2-physfs
+    branch: master
