Try using wget instead of curl

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 
 before_script:
   - choco install -y jdk8 --x86
-  - curl -o lib\physfs_jni.dll -L https://gitlab.com/DavidGregory084/physfs_jni/-/jobs/artifacts/master/raw/target/release/physfs_jni.dll?job=build
+  - wget -O lib\physfs_jni.dll https://gitlab.com/DavidGregory084/physfs_jni/-/jobs/artifacts/master/raw/target/release/physfs_jni.dll?job=build
 
 build:
   extends:
