--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,12 +9,16 @@ install:
   - cmd: .\rustup-init.exe -y --profile minimal --default-toolchain stable --default-host i686-pc-windows-msvc
   - ps: Set-Item -Path env:PATH -Value ($env:PATH + ";" + $env:USERPROFILE + "\.cargo\bin")
 
-test_script:
-  - cmd: cargo test --verbose
-
 build_script:
   - cmd: cargo build --release
+
+test_script:
+  - cmd: cargo test --verbose
 
 artifacts:
   - path: target/release/physfs_jni.dll
     name: PhysFS JNI DLL
+
+cache:
+  - target
+  - '%USERPROFILE%\.cargo'
