--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,8 +1,12 @@
 image: Visual Studio 2019
 
+environment:
+  APPVEYOR_TOKEN:
+    secure: vl0Tyf7ckkyu3xLXvwbRSdZjt6AdKd3gtvs1Ukiegcc=
+
 install:
   - cinst jdk8 --x86
-  - ps: Invoke-WebRequest -Uri https://ci.appveyor.com/api/projects/dgregory084/physfs_jni/artifacts/target/release/physfs_jni.dll?branch=master -OutFile lib\physfs_jni.dll
+  - ps: Invoke-RestMethod -Method Get -Uri https://ci.appveyor.com/api/projects/dgregory084/physfs_jni/artifacts/target/release/physfs_jni.dll?branch=master -OutFile lib\physfs_jni.dll -Headers @{ "Authorization" = "Bearer $APPVEYOR_TOKEN" }
 
 build_script:
   - cmd: .\gradlew.bat build
