--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,6 +14,9 @@ build_script:
 test_script:
   - cmd: .\gradlew.bat test
 
+on_success:
+  - cmd: .\gradlew.bat --stop
+
 cache:
   - '%USERPROFILE%\.m2'
   - '%USERPROFILE%\.gradle\caches'
