--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,7 +6,7 @@ environment:
 
 install:
   - cinst jdk8 --x86
-  - ps: Invoke-RestMethod -Method Get -Uri https://ci.appveyor.com/api/projects/dgregory084/physfs-jni/artifacts/target/release/physfs_jni.dll?branch=master -OutFile lib\physfs_jni.dll -Headers @{ "Authorization" = "Bearer $APPVEYOR_TOKEN" }
+  - ps: Invoke-RestMethod -Method Get -Uri https://ci.appveyor.com/api/projects/dgregory084/physfs-jni/artifacts/target/release/physfs_jni.dll?branch=master -OutFile .\lib\physfs_jni.dll -Headers @{ "Authorization" = "Bearer $APPVEYOR_TOKEN" }
 
 build_script:
   - cmd: .\gradlew.bat build
@@ -16,6 +16,9 @@ test_script:
 
 on_success:
   - cmd: .\gradlew.bat --stop
+
+on_finish:
+  - ps: Push-AppveyorArtifact ,\build\reports\tests\test\index.html
 
 cache:
   - '%USERPROFILE%\.m2'
