--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,16 +1,15 @@
 image: Visual Studio 2019
 
 environment:
+  JAVA_HOME: "C:\Program Files (x86)\Java\jdk1.8.0"
   APPVEYOR_TOKEN:
     secure: vl0Tyf7ckkyu3xLXvwbRSdZjt6AdKd3gtvs1Ukiegcc=
 
 install:
-  - cinst jdk8 --x86
   - ps: Invoke-RestMethod -Method Get -Uri https://ci.appveyor.com/api/projects/dgregory084/physfs-jni/artifacts/target/release/physfs_jni.dll?branch=master -OutFile .\lib\physfs_jni.dll -Headers @{ "Authorization" = "Bearer $APPVEYOR_TOKEN" }
 
 build_script:
-  - cmd: java -version
-  - cmd: .\gradlew.bat --stacktrace build
+  - cmd: .\gradlew.bat build
 
 on_success:
   - cmd: .\gradlew.bat --stop
