--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,7 @@
 image: Visual Studio 2019
 
 environment:
-  JAVA_HOME: "C:\Program Files (x86)\Java\jdk1.8.0"
+  JAVA_HOME: 'C:\Program Files (x86)\Java\jdk1.8.0'
   APPVEYOR_TOKEN:
     secure: vl0Tyf7ckkyu3xLXvwbRSdZjt6AdKd3gtvs1Ukiegcc=
 
