--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,7 @@ image: Visual Studio 2019
 
 environment:
   RUST_BACKTRACE: "1"
+  RUSTFLAGS: "-C target-feature=+crt-static"
 
 install:
   - cinst llvm --x86
