Update AppVeyor script to download DLL to the correct place

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,8 +6,7 @@ environment:
     secure: vl0Tyf7ckkyu3xLXvwbRSdZjt6AdKd3gtvs1Ukiegcc=
 
 install:
-  - cinst vcredist-all --x86
-  - ps: Invoke-RestMethod -Method Get -Uri https://ci.appveyor.com/api/projects/dgregory084/physfs-jni/artifacts/target/release/physfs_jni.dll?branch=master -OutFile .\lib\physfs_jni.dll -Headers @{ "Authorization" = "Bearer $APPVEYOR_TOKEN" }
+  - ps: Invoke-RestMethod -Method Get -Uri https://ci.appveyor.com/api/projects/dgregory084/physfs-jni/artifacts/target/release/physfs_jni.dll?branch=master -OutFile physfs_jni.dll -Headers @{ "Authorization" = "Bearer $APPVEYOR_TOKEN" }
 
 build_script:
   - cmd: .\gradlew.bat build
