--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,6 +15,9 @@ build_script:
   - cmd: .\gradlew.bat build
   - cmd: .\gradlew.bat jacocoTestReport
 
+test_script:
+  - cmd: codecov -f build\reports\jacoco\test\jacocoTestReport.xml
+
 on_success:
   - cmd: .\gradlew.bat --stop
 
