--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,7 @@
 image: Visual Studio 2019
 
 environment:
+  JAVA_HOME: 'C:\Program Files (x86)\Java\jdk1.8.0'
   RUST_BACKTRACE: "1"
   RUSTFLAGS: "-C target-feature=+crt-static"
 
