--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,6 +11,7 @@ install:
   - ps: Set-Item -Path env:PATH -Value ($env:PATH + ";" + $env:USERPROFILE + "\.cargo\bin")
 
 build_script:
+  - cmd: cargo build
   - cmd: cargo build --release
 
 test_script:
@@ -19,6 +20,8 @@ test_script:
 artifacts:
   - path: target/release/physfs_jni.dll
     name: PhysFS JNI DLL
-
+  - path: target/debug/physfs_jni.dll
+    name: PhysFS JNI DLL (Debug Mode)
+    
 cache:
   - '%USERPROFILE%\.cargo'
