--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ build = "build.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-libc = "0.2.69"
-winapi = "0.3.8"
-jni = "0.16"
+libc = "0.2.80"
+winapi = "0.3.9"
+jni = { version = "0.18.0", features = ["invocation"] }
 lazy_static = "1.4.0"
+libloading = "0.6.5"
 
 [build-dependencies]
-bindgen = "0.53.2"
+bindgen = "0.55.1"
