Remove unused JNI invocation feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 libc = "0.2.80"
 winapi = "0.3.9"
-jni = { version = "0.18.0", features = ["invocation"] }
+jni = "0.18.0"
 lazy_static = "1.4.0"
 libloading = "0.6.5"
 
