--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,17 +12,17 @@ install:
   - ps: Set-Item -Path env:PATH -Value ($env:PATH + ";" + $env:USERPROFILE + "\.cargo\bin")
 
 build_script:
-  # - ps: Invoke-Command { cd launcher; cargo build }
-  # - ps: Invoke-Command { cd launcher; cargo build --release }
+  - ps: Invoke-Command { cd launcher; cargo build }
+  - ps: Invoke-Command { cd launcher; cargo build --release }
 
 test_script:
-  # - ps: Invoke-Command { cd launcher; cargo test }
+  - ps: Invoke-Command { cd launcher; cargo test }
 
 artifacts:
-  # - path: launcher/target/release/openil2.exe
-  #   name: OpenIL2 Launcher
-  # - path: launcher/target/debug/openil2.exe
-  #   name: OpenIL2 Launcher (Debug Mode)
+  - path: launcher/target/release/openil2.exe
+    name: OpenIL2 Launcher
+  - path: launcher/target/debug/openil2.exe
+    name: OpenIL2 Launcher (Debug Mode)
 
 cache:
   - '%USERPROFILE%\.cargo'
