--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,7 +20,7 @@ build_script:
   - cmd: cargo build
   - cmd: cargo build --release
 
-  - cmd: copy /y %APPVEYOR_BUILD_FOLDER%\physfs_jni\target\debug\physfs_jni.dll %APPVEYOR_BUILD_FOLDER%\physfs_java
+  - cmd: copy /y %APPVEYOR_BUILD_FOLDER%\physfs_jni\target\release\physfs_jni.dll %APPVEYOR_BUILD_FOLDER%\physfs_java
   - cmd: cd %APPVEYOR_BUILD_FOLDER%\physfs_java
   - cmd: .\gradlew.bat jar
 
@@ -54,7 +54,7 @@ artifacts:
     name: PhysFS Java JUnit Test Report
   - path: physfs_java\build\reports\jacoco\test
     name: PhysFS Java Jacoco Coverage Report
-  - path: physfs_java\build\libs\il2-physfs.jar
+  - path: physfs_java\build\libs\physfs_java.jar
     name: PhysFS Java JAR
 
 cache:
