--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,12 +1,12 @@
 image: Visual Studio 2019
 
 environment:
-  JAVA_HOME: 'C:\Program Files (x86)\Java\jdk1.8.0'
   RUST_BACKTRACE: "1"
   RUSTFLAGS: "-C target-feature=+crt-static"
 
 install:
   - cinst llvm --x86
+  - cinst adoptopenjdk11 --x86
   - ps: Invoke-WebRequest -Uri https://win.rustup.rs/i686 -OutFile rustup-init.exe
   - cmd: .\rustup-init.exe -y --profile minimal --default-toolchain stable --default-host i686-pc-windows-msvc
   - ps: Set-Item -Path env:PATH -Value ($env:PATH + ";" + $env:USERPROFILE + "\.cargo\bin")
@@ -21,8 +21,8 @@ build_script:
   - cmd: cargo build --release
 
   - cmd: copy /y %APPVEYOR_BUILD_FOLDER%\physfs_jni\target\release\physfs_jni.dll %APPVEYOR_BUILD_FOLDER%\physfs_java
-  - cmd: cd %APPVEYOR_BUILD_FOLDER%\physfs_java
-  - cmd: .\gradlew.bat jar
+  - cmd: cd %APPVEYOR_BUILD_FOLDER%
+  - cmd: .\gradlew.bat :physfs_java:jar
 
 on_success:
   - cmd: cd %APPVEYOR_BUILD_FOLDER%\physfs_java
@@ -35,9 +35,9 @@ test_script:
   - cmd: cd %APPVEYOR_BUILD_FOLDER%\physfs_jni
   - cmd: cargo test
 
-  - cmd: cd %APPVEYOR_BUILD_FOLDER%\physfs_java
-  - cmd: .\gradlew.bat test
-  - cmd: .\gradlew.bat jacocoTestReport
+  - cmd: cd %APPVEYOR_BUILD_FOLDER%
+  - cmd: .\gradlew.bat :physfs_java:test
+  - cmd: .\gradlew.bat :physfs_java:jacocoTestReport
 
 artifacts:
   - path: launcher\target\release\openil2.exe
@@ -50,15 +50,14 @@ artifacts:
   - path: physfs_jni\target\debug\physfs_jni.dll
     name: PhysFS JNI DLL (Debug Mode)
 
+  - path: physfs_java\build\libs\physfs_java.jar
+    name: PhysFS Java JAR
   - path: physfs_java\build\reports\tests\test
     name: PhysFS Java JUnit Test Report
   - path: physfs_java\build\reports\jacoco\test
     name: PhysFS Java Jacoco Coverage Report
-  - path: physfs_java\build\libs\physfs_java.jar
-    name: PhysFS Java JAR
 
 cache:
   - '%USERPROFILE%\.cargo'
   - '%USERPROFILE%\.gradle\caches'
   - '%USERPROFILE%\.gradle\wrapper'
-  - '%USERPROFILE%\.gradle\build-cache'
