--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,7 +23,7 @@ build_script:
 
   - cmd: copy /y %APPVEYOR_BUILD_FOLDER%\physfs_jni\target\release\physfs_jni.dll %APPVEYOR_BUILD_FOLDER%\physfs_java
   - cmd: cd %APPVEYOR_BUILD_FOLDER%
-  - cmd: .\gradlew.bat :physfs_java:jar
+  - cmd: .\gradlew.bat :physfs_java:jar --scan
 
 on_success:
   - cmd: cd %APPVEYOR_BUILD_FOLDER%\physfs_java
