--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,6 +11,7 @@ install:
   - ps: Invoke-WebRequest -Uri https://win.rustup.rs/i686 -OutFile rustup-init.exe
   - cmd: .\rustup-init.exe -y --profile minimal --default-toolchain stable --default-host i686-pc-windows-msvc
   - ps: Set-Item -Path env:PATH -Value ($env:PATH + ";" + $env:USERPROFILE + "\.cargo\bin")
+  - ps: Set-Item -Path env:PATH -Value ($env:PATH + ";" + "C:\Program Files (x86)\Inno Setup 6")
 
 build_script:
   - cmd: cd %APPVEYOR_BUILD_FOLDER%\launcher
@@ -25,8 +26,8 @@ build_script:
   - cmd: cd %APPVEYOR_BUILD_FOLDER%
   - cmd: .\gradlew.bat :physfs_java:jar
 
-  - cmd: iscc /O%APPVEYOR_BUILD_FOLDER%\output %APPVEYOR_BUILD_FOLDER%\installer\openil2-debug.iss
-  - cmd: iscc /O%APPVEYOR_BUILD_FOLDER%\output %APPVEYOR_BUILD_FOLDER%\installer\openil2.iss
+  - cmd: iscc /O%APPVEYOR_BUILD_FOLDER%\installer\output %APPVEYOR_BUILD_FOLDER%\installer\openil2-debug.iss
+  - cmd: iscc /O%APPVEYOR_BUILD_FOLDER%\installer\output %APPVEYOR_BUILD_FOLDER%\installer\openil2.iss
 
 test_script:
   - cmd: cd %APPVEYOR_BUILD_FOLDER%\launcher
