--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -43,6 +43,26 @@ build_script:
   - cmd: cd %APPVEYOR_BUILD_FOLDER%
   - cmd: .\gradlew.bat :classload_agent:jar
 
+  # Custom JRE with JMX debugging support
+  #
+  - cmd: cd %APPVEYOR_BUILD_FOLDER%
+  - ps: >-
+      jlink
+        --no-header-files
+        --no-man-pages
+        --add-modules java.base,java.instrument,java.desktop,jdk.jdwp.agent
+        --output jre_debug
+
+  # Custom JRE
+  #
+  - cmd: cd %APPVEYOR_BUILD_FOLDER%
+  - ps: >-
+      jlink
+        --no-header-files
+        --no-man-pages
+        --add-modules java.base,java.instrument,java.desktop
+        --output jre
+
   # Inno Setup installer
   #
   - cmd: cd %APPVEYOR_BUILD_FOLDER%
