Add jdk.management.agent module to debug jlink image

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -46,7 +46,7 @@ build_script:
   # Custom JRE with JMX debugging support
   #
   - cmd: cd %APPVEYOR_BUILD_FOLDER%
-  - ps: jlink --no-header-files --no-man-pages --add-modules java.base,java.instrument,java.desktop,jdk.jdwp.agent --output jre_debug
+  - ps: jlink --no-header-files --no-man-pages --add-modules java.base,java.instrument,java.desktop,jdk.jdwp.agent,jdk.management.agent --output jre_debug
 
   # Custom JRE
   #
