Setup C++ compiler environment for native-image

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,8 +22,16 @@ install:
   - ps: Set-Item -Path env:PATH -Value ($env:PATH + ";" + "C:\Program Files (x86)\Inno Setup 6")
   - cmd: rustup toolchain install stable-x86_64-pc-windows-msvc
   - cmd: rustup target add x86_64-pc-windows-msvc
+  # Set up C++ compiler environment for native-image
+  - cmd: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat
 
 build_script:
+  # Class loading agent
+  #
+  - cmd: cd %APPVEYOR_BUILD_FOLDER%
+  - cmd: .\gradlew.bat :classload_agent:jar
+  - cmd: .\gradlew.bat :classload_agent:nativeImage
+
   # Launcher executable
   #
   - cmd: cd %APPVEYOR_BUILD_FOLDER%\launcher
@@ -48,12 +56,6 @@ build_script:
   - cmd: copy /y %APPVEYOR_BUILD_FOLDER%\physfs_jni\target\release\physfs_jni.dll %APPVEYOR_BUILD_FOLDER%\physfs_java
   - cmd: cd %APPVEYOR_BUILD_FOLDER%
   - cmd: .\gradlew.bat :physfs_java:jar
-
-  # Class loading agent
-  #
-  - cmd: cd %APPVEYOR_BUILD_FOLDER%
-  - cmd: .\gradlew.bat :classload_agent:jar
-  - cmd: .\gradlew.bat :classload_agent:nativeImage
 
   # Custom JRE with JMX debugging support
   #
