--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,13 +17,14 @@ install:
   # Fetch and install Rust tooling
   - ps: Invoke-WebRequest -Uri https://win.rustup.rs/i686 -OutFile rustup-init.exe
   - cmd: .\rustup-init.exe -y --profile minimal --default-toolchain stable --default-host i686-pc-windows-msvc
+  # Add 64-bit MSVC toolchain for repacker
+  - cmd: rustup toolchain install stable-x86_64-pc-windows-msvc
+  - cmd: rustup target add x86_64-pc-windows-msvc
   # Add cargo build tool and Inno Setup to PATH
   - ps: Set-Item -Path env:PATH -Value ($env:PATH + ";" + $env:USERPROFILE + "\.cargo\bin")
   - ps: Set-Item -Path env:PATH -Value ($env:PATH + ";" + "C:\Program Files (x86)\Inno Setup 6")
-  - cmd: rustup toolchain install stable-x86_64-pc-windows-msvc
-  - cmd: rustup target add x86_64-pc-windows-msvc
   # Set up C++ compiler environment for native-image
-  - cmd: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat
+  - ps: & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat"
 
 build_script:
   # Class loading agent
