--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,9 +9,9 @@ install:
   # Install 32-bit versions of LLVM, GraalVM and JDK11
   - cinst llvm --x86
   - cinst graalvm --version 20.3.0
+  - cinst adoptopenjdk11 --x86 --params="/ADDLOCAL=FeatureMain,FeatureEnvironment,FeatureJarFileRunWith,FeatureJavaHome /INSTALLDIR=%ProgramFiles%\AdoptOpenJDK"
   # Set GraalVM home variable separately
   - ps: Set-Item -Path env:GRAALVM_HOME -Value ($env:ProgramFiles + "\GraalVM\graalvm-ce-java11-20.3.0")
-  - cinst adoptopenjdk11 --x86 --params="/ADDLOCAL=FeatureMain,FeatureEnvironment,FeatureJarFileRunWith,FeatureJavaHome /INSTALLDIR=%ProgramFiles%\AdoptOpenJDK"
   # Refresh environment variables to ensure JAVA_HOME has been updated
   - cmd: refreshenv
   # Fetch and install Rust tooling
@@ -24,7 +24,8 @@ install:
   - cmd: rustup toolchain install stable-x86_64-pc-windows-msvc
   - cmd: rustup target add x86_64-pc-windows-msvc
   # Set up C++ compiler environment for native-image
-  - ps: '& "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat"'
+  - cinst visualstudio2017-workload-vctools
+  - cmd: call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
 
 build_script:
   # Class loading agent
