--- a/physfs_jni/Cargo.toml
+++ b/physfs_jni/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["David Gregory <davidgregory084@gmail.com>"]
 edition = "2018"
 build = "build.rs"
+license = "BSD-2-Clause-Patent"
 
 [lib]
 crate-type = ["cdylib"]
