--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
       with:
         profile: minimal
         toolchain: stable-i686-pc-windows-msvc
+    - name: Add Clang to PATH
+      run: echo "C:\msys64\mingw32\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     - name: Build (debug)
       working-directory: launcher
       run: cargo build
@@ -45,6 +47,8 @@ jobs:
       with:
         profile: minimal
         toolchain: stable-i686-pc-windows-msvc
+    - name: Add Clang to PATH
+      run: echo "C:\msys64\mingw32\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     - name: Build (debug)
       working-directory: physfs_jni
       run: cargo build
@@ -65,6 +69,8 @@ jobs:
       with:
         profile: minimal
         toolchain: stable-i686-pc-windows-msvc
+    - name: Add Clang to PATH
+      run: echo "C:\msys64\mingw32\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     - name: Build (debug)
       working-directory: physfs_rts
       run: cargo build
@@ -131,6 +137,7 @@ jobs:
       shell: pwsh
       run: |
         $graalvm_home = cs java-home graalvm-ce-java11:20.3.2
+        Get-ChildItem $graalvm_home
         echo "GRAALVM_HOME=$graalvm_home" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
     - uses: gradle/gradle-build-action@v2
       with:
