--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
         distribution: 'temurin'
         java-version: '11'
         architecture: x86
-    - name: Add Clang to PATH
-      run: echo "C:\msys64\mingw32\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+    - name: Set LIBCLANG_PATH
+      run: echo 'LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")' | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
     - name: Build (debug)
       working-directory: launcher
       run: cargo build
@@ -36,12 +36,16 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: launcher_exe_debug
-        path: launcher\target\debug\openil2.{exe,pdb}
+        path: |
+          launcher\target\debug\openil2.exe
+          launcher\target\debug\openil2.pdb
         if-no-files-found: error
     - uses: actions/upload-artifact@v2
       with:
         name: launcher_exe_release
-        path: launcher\target\release\openil2.{exe,pdb}
+        path: |
+          launcher\target\release\openil2.exe
+          launcher\target\release\openil2.pdb
         if-no-files-found: error
 
   build-physfs_jni:
@@ -57,8 +61,8 @@ jobs:
         distribution: 'temurin'
         java-version: '11'
         architecture: x86
-    - name: Add Clang to PATH
-      run: echo "C:\msys64\mingw32\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+    - name: Set LIBCLANG_PATH
+      run: echo 'LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")' | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
     - name: Build (debug)
       working-directory: physfs_jni
       run: cargo build
@@ -68,7 +72,9 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: physfs_jni_dll
-        path: physfs_jni\target\release\physfs_jni.{dll,pdb}
+        path: |
+          physfs_jni\target\release\physfs_jni.dll
+          physfs_jni\target\release\physfs_jni.pdb
         if-no-files-found: error
       
   build-physfs_rts:
@@ -84,8 +90,8 @@ jobs:
         distribution: 'temurin'
         java-version: '11'
         architecture: x86
-    - name: Add Clang to PATH
-      run: echo "C:\msys64\mingw32\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+    - name: Set LIBCLANG_PATH
+      run: echo 'LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")' | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
     - name: Build (debug)
       working-directory: physfs_rts
       run: cargo build
@@ -95,7 +101,9 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: physfs_rts_dll
-        path: physfs_rts\target\release\physfs_rts.{dll,pdb}
+        path: |
+          physfs_rts\target\release\physfs_rts.dll
+          physfs_rts\target\release\physfs_rts.pdb
         if-no-files-found: error
       
   build-repacker:
@@ -115,7 +123,9 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: repacker_exe
-        path: repacker\target\release\repacker.{exe,pdb}
+        path: |
+          repacker\target\release\repacker.exe
+          repacker\target\release\repacker.pdb
         if-no-files-found: error
 
   build-physfs_java:
@@ -160,7 +170,9 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: classload_agent_exe
-        path: classload_agent\build\executable\class-transformer.{exe,pdb}
+        path: |
+          classload_agent\build\executable\class-transformer.exe
+          classload_agent\build\executable\class-transformer.pdb
         if-no-files-found: error
         
   create-custom-java-runtimes:
